--- a/POS_SYSTEM/.env
+++ b/POS_SYSTEM/.env
@@ -3,3 +3,7 @@ MYSQLUSER=root
 MYSQL_ROOT_PASSWORD=iLUNESurqBBWmsppSLqQkkzbjFCRccnN
 RAILWAY_MYSQL_HOST=autorack.proxy.rlwy.net
 RAILWAY_MYSQL_PORT=23800
+
+host=localhost
+user=uzair
+password=hello23sql
