--- a/POS_SYSTEM/.env
+++ b/POS_SYSTEM/.env
@@ -5,5 +5,7 @@ RAILWAY_MYSQL_HOST=autorack.proxy.rlwy.net
 RAILWAY_MYSQL_PORT=23800
 
 host=localhost
+name=posdb
 user=uzair
 password=hello23sql
+port=3306
